--- a/MemoriaFlora/Utils/en.lproj/Localizable.strings
+++ b/MemoriaFlora/Utils/en.lproj/Localizable.strings
@@ -5,4 +5,83 @@
 //  Created by ImranAftab on 6/2/24.
 //
 
-import Foundation
+"Create an account" = "Create an account";
+"Forgot Password" = "Forgot Password";
+"Caro Estinto uses cookies for analytics, personalized contents and ads, using Caro Estinto's service you agree with Policy and Rules." = "Caro Estinto uses cookies for analytics, personalized contents and ads, using Caro Estinto's service you agree with Policy and Rules.";
+"Create Account" = "Create Account";
+"Login" = "Login";
+"Forgot Password" = "Forgot Password";
+"Share Memory" = "Share Memory";
+"Logout" = "Logout";
+"Delete Account" = "Delete Account";
+"Create Memories" = "Create Memories";
+"Pay for a Floral Tribute" = "Pay for a Floral Tribute";
+"Date of Demise" = "Date of Demise";
+"Purchase Flower" = "Purchase Flower";
+"Pay" = "Pay";
+"Update Flower" = "Update Flower";
+"This is an admin account, You can swipe left to delete or edit memories, You can also edit flower names images and prices" = "This is an admin account, You can swipe left to delete or edit memories, You can also edit flower names images and prices";
+
+"Profile" = "Profile";
+"Edit Flowers" = "Edit Flowers";
+"Please enter your email" = "Please enter your email";
+"Please enter a valid email" = "Please enter a valid email";
+"Please enter a password" = "Please enter a password";
+"Alert" = "Alert";
+"OK" = "OK";
+"Please enter your name" = "Please enter your name";
+"Please confirm your password" = "Please confirm your password";
+"Passwords do not match" = "Passwords do not match";
+"User signed up successfully!" = "User signed up successfully!";
+"Reset password email sent successfully" = "Reset password email sent successfully";
+"Please select a flower category" = "Please select a flower category";
+"Please select a flower for condolences" = "Please select a flower for condolences";
+"No products found, Something went wrong" = "No products found, Something went wrong";
+"Roses" = "Roses"; //Flower Category
+"Orchids" = "Orchids"; //Flower Category
+"Carnations" = "Carnations"; //Flower Category
+"Lilies" = "Lilies"; //Flower Category
+"Please enter price to update" = "Please enter price to update";
+"Failed to convert image to data" = "Failed to convert image to data";
+"Flowers data updated successfully!, Remember to adjust the item price on the app store to ensure accurate reflection within the app" = "Flowers data updated successfully!, Remember to adjust the item price on the app store to ensure accurate reflection within the app";
+"Enter price here" = "Enter price here";
+"User not found" = "User not found";
+"Please enter name" = "Please enter name";
+"Please enter Date of Demise" = "Please enter Date of Demise";
+"Please enter description" = "Please enter description";
+"Please select a picture" = "Please select a picture";
+"Upload failed. Please try again." = "Upload failed. Please try again.";
+"Post updated successfully" = "Post updated successfully";
+"Posted successfully" = "Posted successfully";
+"Name" = "Name";
+"Funeral Agency (Optional)" = "Funeral Agency (Optional)";
+"Reauthentication" = "Reauthentication";
+"Please enter your password to proceed" = "Please enter your password to proceed";
+"Password" = "Password";
+"Cancel" = "Cancel";
+"Failed to reauthenticate" = "Failed to reauthenticate";
+"Failed to delete user" = "Failed to delete user";
+"Please enter your password to proceed" = "Please enter your password to proceed";
+"Payment Made Successfully" = "Payment Made Successfully";
+"Success" = "Success";
+"Menu" = "Menu";
+"Add" = "Add";
+"Funeral Agency" = "Funeral Agency";
+"Search" = "Search";
+"Coral Charm" = "Coral Charm"; //Flower Name
+"Blush Beauty" = "Blush Beauty"; //Flower Name
+"Lavender Love" = "Lavender Love"; //Flower Name
+"White Lily" = "White Lily"; //Flower Name
+"Cassa Blanca Lily" = "Cassa Blanca Lily"; //Flower Name
+"Calla Lily" = "Calla Lily"; //Flower Name
+"Scented Orchid" = "Scented Orchid"; //Flower Name
+"Sunburst Orchid" = "Sunburst Orchid"; //Flower Name
+"Dream Orchid" = "Dream Orchid"; //Flower Name
+"Juliet" = "Juliet"; //Flower Name
+"Blue Moon" = "Blue Moon"; //Flower Name
+"Eden Rose" = "Eden Rose"; //Flower Name
+"Pay Tribute" = "Pay Tribute";
+"Share" = "Share";
+"Rules" = "Rules";
+"Policy" = "Policy";
+"Loading" = "Loading";
