--- a/MemoriaFlora/Utils/es.lproj/Localizable.strings
+++ b/MemoriaFlora/Utils/es.lproj/Localizable.strings
@@ -5,4 +5,83 @@
 //  Created by ImranAftab on 6/2/24.
 //
 
-import Foundation
+"Create an account" = "Crear una cuenta";
+"Forgot Password" = "Olvidó la contraseña";
+"Caro Estinto uses cookies for analytics, personalized contents and ads, using Caro Estinto's service you agree with Policy and Rules." = "Caro Estinto utiliza cookies para análisis, contenidos personalizados y anuncios. Al utilizar el servicio de Caro Estinto, usted acepta la Política y Reglas.";
+"Create Account" = "Crear cuenta";
+"Login" = "Iniciar sesión";
+"Forgot Password" = "Olvidó la contraseña";
+"Share Memory" = "Compartir memoria";
+"Logout" = "Cerrar sesión";
+"Delete Account" = "Eliminar cuenta";
+"Create Memories" = "Crear recuerdos";
+"Pay for a Floral Tribute" = "Pagar por un homenaje floral";
+"Date of Demise" = "Fecha de fallecimiento";
+"Purchase Flower" = "Comprar flor";
+"Pay" = "Pagar";
+"Update Flower" = "Actualizar flor";
+"This is an admin account, You can swipe left to delete or edit memories, You can also edit flower names images and prices" = "Esta es una cuenta de administrador. Puede deslizar hacia la izquierda para eliminar o editar recuerdos. También puede editar nombres, imágenes y precios de flores";
+
+"Profile" = "Perfil";
+"Edit Flowers" = "Editar flores";
+"Please enter your email" = "Por favor, introduzca su correo electrónico";
+"Please enter a valid email" = "Por favor, introduzca un correo electrónico válido";
+"Please enter a password" = "Por favor, introduzca una contraseña";
+"Alert" = "Alerta";
+"OK" = "OK";
+"Please enter your name" = "Por favor, introduzca su nombre";
+"Please confirm your password" = "Por favor, confirme su contraseña";
+"Passwords do not match" = "Las contraseñas no coinciden";
+"User signed up successfully!" = "¡Usuario registrado con éxito!";
+"Reset password email sent successfully" = "Correo de restablecimiento de contraseña enviado con éxito";
+"Please select a flower category" = "Por favor, seleccione una categoría de flores";
+"Please select a flower for condolences" = "Por favor, seleccione una flor para condolencias";
+"No products found, Something went wrong" = "No se encontraron productos, algo salió mal";
+"Roses" = "Rosas"; //Categoría de flores
+"Orchids" = "Orquídeas"; //Categoría de flores
+"Carnations" = "Claveles"; //Categoría de flores
+"Lilies" = "Lirios"; //Categoría de flores
+"Please enter price to update" = "Por favor, introduzca el precio para actualizar";
+"Failed to convert image to data" = "Error al convertir la imagen en datos";
+"Flowers data updated successfully!, Remember to adjust the item price on the app store to ensure accurate reflection within the app" = "¡Datos de las flores actualizados con éxito! Recuerde ajustar el precio del artículo en la tienda de aplicaciones para asegurar una correcta reflexión dentro de la app";
+"Enter price here" = "Introduzca el precio aquí";
+"User not found" = "Usuario no encontrado";
+"Please enter name" = "Por favor, introduzca el nombre";
+"Please enter Date of Demise" = "Por favor, introduzca la fecha de fallecimiento";
+"Please enter description" = "Por favor, introduzca la descripción";
+"Please select a picture" = "Por favor, seleccione una imagen";
+"Upload failed. Please try again." = "Error al subir. Por favor, inténtelo de nuevo.";
+"Post updated successfully" = "Publicación actualizada con éxito";
+"Posted successfully" = "Publicado con éxito";
+"Name" = "Nombre";
+"Funeral Agency (Optional)" = "Agencia funeraria (Opcional)";
+"Reauthentication" = "Reautenticación";
+"Please enter your password to proceed" = "Por favor, introduzca su contraseña para continuar";
+"Password" = "Contraseña";
+"Cancel" = "Cancelar";
+"Failed to reauthenticate" = "Error al reautenticar";
+"Failed to delete user" = "Error al eliminar el usuario";
+"Please enter your password to proceed" = "Por favor, introduzca su contraseña para continuar";
+"Payment Made Successfully" = "Pago realizado con éxito";
+"Success" = "Éxito";
+"Menu" = "Menú";
+"Add" = "Añadir";
+"Funeral Agency" = "Agencia funeraria";
+"Search" = "Buscar";
+"Coral Charm" = "Encanto coral"; //Nombre de la flor
+"Blush Beauty" = "Belleza rubor"; //Nombre de la flor
+"Lavender Love" = "Amor lavanda"; //Nombre de la flor
+"White Lily" = "Lirio blanco"; //Nombre de la flor
+"Cassa Blanca Lily" = "Lirio Cassa Blanca"; //Nombre de la flor
+"Calla Lily" = "Lirio de cala"; //Nombre de la flor
+"Scented Orchid" = "Orquídea perfumada"; //Nombre de la flor
+"Sunburst Orchid" = "Orquídea estallido de sol"; //Nombre de la flor
+"Dream Orchid" = "Orquídea de ensueño"; //Nombre de la flor
+"Juliet" = "Juliet"; //Nombre de la flor
+"Blue Moon" = "Luna azul"; //Nombre de la flor
+"Eden Rose" = "Rosa de Edén"; //Nombre de la flor
+"Pay Tribute" = "Rendir Tributo";
+"Share" = "Compartir";
+"Rules" = "Reglas";
+"Policy" = "Política";
+"Loading" = "Cargando";
