--- a/MemoriaFlora/Utils/it.lproj/Localizable.strings
+++ b/MemoriaFlora/Utils/it.lproj/Localizable.strings
@@ -5,4 +5,84 @@
 //  Created by ImranAftab on 6/2/24.
 //
 
-import Foundation
+"Create an account" = "Crea un account";
+"Forgot Password" = "Password dimenticata";
+"Caro Estinto uses cookies for analytics, personalized contents and ads, using Caro Estinto's service you agree with Policy and Rules." = "Caro Estinto utilizza i cookie per analisi, contenuti personalizzati e annunci pubblicitari. Utilizzando il servizio di Caro Estinto, accetti la Politica e le Regole.";
+"Create Account" = "Crea account";
+"Login" = "Accedi";
+"Forgot Password" = "Password dimenticata";
+"Share Memory" = "Condividi un ricordo";
+"Logout" = "Disconnetti";
+"Delete Account" = "Elimina account";
+"Create Memories" = "Crea ricordi";
+"Pay for a Floral Tribute" = "Paga per un tributo floreale";
+"Date of Demise" = "Data del decesso";
+"Purchase Flower" = "Acquista fiore";
+"Pay" = "Paga";
+"Update Flower" = "Aggiorna fiore";
+"This is an admin account, You can swipe left to delete or edit memories, You can also edit flower names images and prices" = "Questo è un account amministratore. Puoi scorrere a sinistra per eliminare o modificare i ricordi, puoi anche modificare i nomi, le immagini e i prezzi dei fiori";
+
+"Profile" = "Profilo";
+"Edit Flowers" = "Modifica fiori";
+"Please enter your email" = "Per favore inserisci la tua email";
+"Please enter a valid email" = "Per favore inserisci una email valida";
+"Please enter a password" = "Per favore inserisci una password";
+"Alert" = "Avviso";
+"OK" = "OK";
+"Please enter your name" = "Per favore inserisci il tuo nome";
+"Please confirm your password" = "Per favore conferma la tua password";
+"Passwords do not match" = "Le password non corrispondono";
+"User signed up successfully!" = "Utente registrato con successo!";
+"Reset password email sent successfully" = "Email di reimpostazione della password inviata con successo";
+"Please select a flower category" = "Per favore seleziona una categoria di fiori";
+"Please select a flower for condolences" = "Per favore seleziona un fiore per le condoglianze";
+"No products found, Something went wrong" = "Nessun prodotto trovato, qualcosa è andato storto";
+"Roses" = "Rose"; //Categoria di fiori
+"Orchids" = "Orchidee"; //Categoria di fiori
+"Carnations" = "Garofani"; //Categoria di fiori
+"Lilies" = "Gigli"; //Categoria di fiori
+"Please enter price to update" = "Per favore inserisci il prezzo da aggiornare";
+"Failed to convert image to data" = "Conversione dell'immagine in dati non riuscita";
+"Flowers data updated successfully!, Remember to adjust the item price on the app store to ensure accurate reflection within the app" = "Dati dei fiori aggiornati con successo! Ricorda di aggiornare il prezzo dell'articolo nell'app store per garantire un riflesso accurato all'interno dell'app";
+"Enter price here" = "Inserisci il prezzo qui";
+"User not found" = "Utente non trovato";
+"Please enter name" = "Per favore inserisci il nome";
+"Please enter Date of Demise" = "Per favore inserisci la data del decesso";
+"Please enter description" = "Per favore inserisci una descrizione";
+"Please select a picture" = "Per favore seleziona un'immagine";
+"Upload failed. Please try again." = "Caricamento fallito. Per favore riprova.";
+"Post updated successfully" = "Post aggiornato con successo";
+"Posted successfully" = "Pubblicato con successo";
+"Name" = "Nome";
+"Funeral Agency (Optional)" = "Agenzia funebre (Opzionale)";
+"Reauthentication" = "Riautenticazione";
+"Please enter your password to proceed" = "Per favore inserisci la tua password per procedere";
+"Password" = "Password";
+"Cancel" = "Annulla";
+"Failed to reauthenticate" = "Riautenticazione non riuscita";
+"Failed to delete user" = "Eliminazione dell'utente non riuscita";
+"Please enter your password to proceed" = "Per favore inserisci la tua password per procedere";
+"Payment Made Successfully" = "Pagamento effettuato con successo";
+"Success" = "Successo";
+"Menu" = "Menu";
+"Add" = "Aggiungi";
+"Funeral Agency" = "Agenzia funebre";
+"Search" = "Cerca";
+"Coral Charm" = "Fascino corallo"; //Nome del fiore
+"Blush Beauty" = "Bellezza rosa"; //Nome del fiore
+"Lavender Love" = "Amore lavanda"; //Nome del fiore
+"White Lily" = "Giglio bianco"; //Nome del fiore
+"Cassa Blanca Lily" = "Giglio Cassa Blanca"; //Nome del fiore
+"Calla Lily" = "Giglio Calla"; //Nome del fiore
+"Scented Orchid" = "Orchidea profumata"; //Nome del fiore
+"Sunburst Orchid" = "Orchidea radiosa"; //Nome del fiore
+"Dream Orchid" = "Orchidea dei sogni"; //Nome del fiore
+"Juliet" = "Juliet"; //Nome del fiore
+"Blue Moon" = "Luna blu"; //Nome del fiore
+"Eden Rose" = "Rosa Eden"; //Nome del fiore
+"Pay Tribute" = "Rendi omaggio";
+"Share" = "Condividi";
+"Rules" = "Regole";
+"Policy" = "Politica";
+"Loading" = "Caricamento";
+
