--- a/MemoriaFlora/Utils/pt-PT.lproj/Localizable.strings
+++ b/MemoriaFlora/Utils/pt-PT.lproj/Localizable.strings
@@ -5,4 +5,83 @@
 //  Created by ImranAftab on 6/2/24.
 //
 
-import Foundation
+"Create an account" = "Criar uma conta";
+"Forgot Password" = "Esqueceu a Palavra-passe";
+"Caro Estinto uses cookies for analytics, personalized contents and ads, using Caro Estinto's service you agree with Policy and Rules." = "Caro Estinto utiliza cookies para análise, conteúdos personalizados e anúncios. Ao utilizar o serviço do Caro Estinto, concorda com a Política e Regras.";
+"Create Account" = "Criar Conta";
+"Login" = "Entrar";
+"Forgot Password" = "Esqueceu a Palavra-passe";
+"Share Memory" = "Partilhar Memória";
+"Logout" = "Sair";
+"Delete Account" = "Eliminar Conta";
+"Create Memories" = "Criar Memórias";
+"Pay for a Floral Tribute" = "Pagar por um Tributo Floral";
+"Date of Demise" = "Data do Falecimento";
+"Purchase Flower" = "Comprar Flor";
+"Pay" = "Pagar";
+"Update Flower" = "Atualizar Flor";
+"This is an admin account, You can swipe left to delete or edit memories, You can also edit flower names images and prices" = "Esta é uma conta de administrador. Pode deslizar para a esquerda para eliminar ou editar memórias, também pode editar nomes, imagens e preços de flores";
+
+"Profile" = "Perfil";
+"Edit Flowers" = "Editar Flores";
+"Please enter your email" = "Por favor, introduza o seu email";
+"Please enter a valid email" = "Por favor, introduza um email válido";
+"Please enter a password" = "Por favor, introduza uma palavra-passe";
+"Alert" = "Alerta";
+"OK" = "OK";
+"Please enter your name" = "Por favor, introduza o seu nome";
+"Please confirm your password" = "Por favor, confirme a sua palavra-passe";
+"Passwords do not match" = "As palavras-passe não coincidem";
+"User signed up successfully!" = "Utilizador registado com sucesso!";
+"Reset password email sent successfully" = "Email de redefinição de palavra-passe enviado com sucesso";
+"Please select a flower category" = "Por favor, selecione uma categoria de flores";
+"Please select a flower for condolences" = "Por favor, selecione uma flor para condolências";
+"No products found, Something went wrong" = "Nenhum produto encontrado, algo correu mal";
+"Roses" = "Rosas"; //Categoria de flores
+"Orchids" = "Orquídeas"; //Categoria de flores
+"Carnations" = "Cravos"; //Categoria de flores
+"Lilies" = "Lírios"; //Categoria de flores
+"Please enter price to update" = "Por favor, introduza o preço para atualizar";
+"Failed to convert image to data" = "Falha ao converter imagem em dados";
+"Flowers data updated successfully!, Remember to adjust the item price on the app store to ensure accurate reflection within the app" = "Dados das flores atualizados com sucesso! Lembre-se de ajustar o preço do item na app store para garantir uma reflexão precisa dentro da aplicação";
+"Enter price here" = "Introduza o preço aqui";
+"User not found" = "Utilizador não encontrado";
+"Please enter name" = "Por favor, introduza o nome";
+"Please enter Date of Demise" = "Por favor, introduza a Data do Falecimento";
+"Please enter description" = "Por favor, introduza a descrição";
+"Please select a picture" = "Por favor, selecione uma imagem";
+"Upload failed. Please try again." = "Carregamento falhou. Por favor, tente novamente.";
+"Post updated successfully" = "Publicação atualizada com sucesso";
+"Posted successfully" = "Publicado com sucesso";
+"Name" = "Nome";
+"Funeral Agency (Optional)" = "Agência Funerária (Opcional)";
+"Reauthentication" = "Reautenticação";
+"Please enter your password to proceed" = "Por favor, introduza a sua palavra-passe para prosseguir";
+"Password" = "Palavra-passe";
+"Cancel" = "Cancelar";
+"Failed to reauthenticate" = "Falha ao reautenticar";
+"Failed to delete user" = "Falha ao eliminar o utilizador";
+"Please enter your password to proceed" = "Por favor, introduza a sua palavra-passe para prosseguir";
+"Payment Made Successfully" = "Pagamento efetuado com sucesso";
+"Success" = "Sucesso";
+"Menu" = "Menu";
+"Add" = "Adicionar";
+"Funeral Agency" = "Agência Funerária";
+"Search" = "Pesquisar";
+"Coral Charm" = "Encanto Coral"; //Nome da flor
+"Blush Beauty" = "Beleza Corada"; //Nome da flor
+"Lavender Love" = "Amor Lavanda"; //Nome da flor
+"White Lily" = "Lírio Branco"; //Nome da flor
+"Cassa Blanca Lily" = "Lírio Cassa Blanca"; //Nome da flor
+"Calla Lily" = "Lírio Calla"; //Nome da flor
+"Scented Orchid" = "Orquídea Perfumada"; //Nome da flor
+"Sunburst Orchid" = "Orquídea Radiante"; //Nome da flor
+"Dream Orchid" = "Orquídea de Sonho"; //Nome da flor
+"Juliet" = "Juliet"; //Nome da flor
+"Blue Moon" = "Lua Azul"; //Nome da flor
+"Eden Rose" = "Rosa do Éden"; //Nome da flor
+"Pay Tribute" = "Prestar Homenagem";
+"Share" = "Partilhar";
+"Rules" = "Regras";
+"Policy" = "Política";
+"Loading" = "Carregando";
